--- a/static/css/style.css
+++ b/static/css/style.css
@@ -565,6 +565,11 @@ main .dashboard .card-big img {
     text-align: justify;
 }
 
+.card-bigtwo p {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
 main .card {
     background-color: rgba(255, 255, 255, 0.2);
     padding: 20px;
