--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,7 +128,7 @@ h1 {
 }
 
 .weatherwidget {
-    background: linear-gradient(-310deg, #015d65,#bfff00 );
+    background: linear-gradient(-310deg, #015d65,#bfff00);
     color: #fff;
     border-radius: 5px;
     padding: 20px;
@@ -197,6 +197,7 @@ h1 {
     min-height: 100vh; /* Full height of the viewport */
     box-shadow: 2px 0 5px var(--box-shadow);
     transition: width 0.3s ease;
+    position: relative; /* Add position relative to contain overlays */
 }
 
 /* Minimized sidebar */
@@ -279,18 +280,94 @@ h1 {
     padding: 20px;
     border-radius: 5px;
     text-align: center;
-    gap: 20px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: space-between; 
+    gap: 5px; 
+    height: 150px; 
 }
 
 aside .card h3 {
     margin-bottom: 5px;
     color: var(--color-white);
+    font-size: 18px;
+    flex-grow: 1;
 }
 
 aside .card p {
     font-size: 1.5rem;
     color: var(--color-light);
 }
+
+/* Overlay for expanded card */
+.overlay {
+    position: absolute; /* Position relative to sidebar */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: none; /* Hidden by default */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.expanded-card {
+    background: linear-gradient(-310deg, rgba(1, 93, 101, 0.8), rgba(191, 255, 0, 0.8));
+    border-radius: 10px;
+    padding: 20px;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    box-sizing: border-box;
+}
+
+.closeBtn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: white;
+    border: none;
+    cursor: pointer;
+}
+
+.expandBtn {
+    background-color: #f8f9fa;
+    border: 1px solid #f8f9fa;
+    border-radius: 4px;
+    color: #3c4043;
+    cursor: pointer;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    height: 20px;
+    line-height: 20px;
+    min-width: 54px;
+    padding: 0 16px;
+    text-align: center;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    white-space: pre;
+    margin-top: 20px;
+}
+
+.expandBtn:hover {
+  border-color: #dadce0;
+  box-shadow: rgba(0, 0, 0, .1) 0 1px 1px;
+  color: #202124;
+}
+
+.expandBtn:focus {
+  border-color: #4285f4;
+  outline: none;
+}
+
 
 /* -------------------------SLIDER BUTTON RIGHT SIDE------------------------------- */
 
