--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,183 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IoT-based Urban Gardening 11</title>
     <!-- MATERIAL CDN -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+      rel="stylesheet"
+    />
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="{{ url_for('send_css', path='style.css') }}">
-</head>
-<body>
+    <link rel="stylesheet" href="{{ url_for('send_css', path='style.css') }}" />
+  </head>
+  <body>
     <div class="container">
-        <!-- LEFT SIDE START HERE-->
-        <aside id="sidebar-left">
-            <div class="top">
-                <div class="logo" id="toggle-btn-left">
-                    <img src="{{ url_for('static', filename='images/leaves.png') }}" alt="Logo"> 
-                    <h2>Weather Forecast</h2>
-                </div>
+      <!-- LEFT SIDE START HERE-->
+      <aside id="sidebar-left">
+        <div class="top">
+          <div class="logo" id="toggle-btn-left">
+            <img
+              src="{{ url_for('static', filename='images/leaves.png') }}"
+              alt="Logo"
+            />
+            <h2>Weather Forecast</h2>
+          </div>
+        </div>
+        <div class="sidebar-content">
+          <!-- we want to integrate weather information in this sidebar -->
+          <div class="weatherwidget">
+            <img
+              src="{{ url_for('static', filename='images/weather/w_sunny.png') }}"
+              class="weather-icon"
+            />
+            <h1 class="temp">N/A</h1>
+            <h2 class="city">Munich</h2>
+            <div class="details">
+              <div class="col">
+                <img
+                  src="{{ url_for('static', filename='images/weather/w_airwave.png') }}"
+                />
+                <p class="value value_humidity">N/A</p>
+                <p class="label">Humidity</p>
+              </div>
+              <div class="col">
+                <img
+                  src="{{ url_for('static', filename='images/weather/w_air.png') }}"
+                />
+                <p class="value value_wind">N/A</p>
+                <p class="label">Wind Speed</p>
+              </div>
             </div>
-            <div class="sidebar-content">
-                <!-- we want to integrate weather information in this sidebar -->
-                <div class="weatherwidget">
-                    <img src="{{ url_for('static', filename='images/weather/w_sunny.png') }}" class="weather-icon"> 
-                    <h1 class="temp">N/A</h1>
-                    <h2 class="city">Munich</h2>
-                    <div class="details">
-                        <div class="col">
-                            <img src="{{ url_for('static', filename='images/weather/w_airwave.png') }}">
-                            <p class="value value_humidity">N/A</p>
-                            <p class="label">Humidity</p>
-                        </div>
-                        <div class="col">
-                            <img src="{{ url_for('static', filename='images/weather/w_air.png') }}">
-                            <p class="value value_wind">N/A</p>
-                            <p class="label">Wind Speed</p>
-                        </div>
-                    </div>
-                </div>
+          </div>
 
-                <h3>Warning !</h3>
-                <p class="warning">
-                    Everything is ok</p> 
-                <p class="warning">
-                    Everything is not ok
+          <h3>Warning !</h3>
+          <p class="warning">Everything is ok</p>
+          <p class="warning">Everything is not ok</p>
+        </div>
+      </aside>
+      <!-- LEFT SIDE END HERE-->
+
+      <main>
+        <header>
+          <div class="alert">
+            <h3>Warning :</h3>
+            <p>The temperature is low!</p>
+            <span class="material-symbols-outlined" id="close-alert"
+              >close</span
+            >
+          </div>
+          <span
+            class="material-symbols-outlined"
+            id="open-alert"
+            style="display: none"
+            >more_horiz</span
+          >
+        </header>
+
+        <h2>IoT-based</h2>
+        <h2>Urban Gardening</h2>
+
+        <div class="dashboard">
+          <div class="card-big">
+            <h3>Plant General Knowledge</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor
+              sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam.
+            </p>
+            <img
+              src="{{ url_for('static', filename='images/microgreens.png') }}"
+              alt="microgreens"
+            />
+          </div>
+          <div class="card-bigtwo">
+            <h3>Soil Moisture</h3>
+            <p id="soil-moisture-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>Temperature</h3>
+            <p id="temperature-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>Pressure</h3>
+            <p id="pressure-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>Humidity</h3>
+            <p id="humidity-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>Visible Light</h3>
+            <p id="visible-light-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>Infrared</h3>
+            <p id="infrared-value">N/A</p>
+          </div>
+          <div class="card">
+            <h3>UV</h3>
+            <p id="uv-value">N/A</p>
+          </div>
+        </div>
+      </main>
+
+      <!-- RIGHT SIDE START HERE-->
+      <aside id="sidebar-right">
+        <div class="top">
+          <div class="logo" id="toggle-btn-right">
+            <img
+              src="{{ url_for('static', filename='images/tunes.png') }}"
+              alt="Logo"
+            />
+            <h2>Control Board</h2>
+          </div>
+        </div>
+        <div class="sidebarright-content">
+          <!-- Water Pump -->
+          <div class="card">
+            <!-- Expandable features -->
+            <button class="expandBtn">Water Pump</button>
+            <!-- giving expandable button -->
+            <div class="overlay" id="overlay-water-pump">
+              <div class="expanded-card">
+                <h3>Water Pump</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam.
                 </p>
+                <!-- move switch into expand area -->
+                <div class="button-group">
+                  <button
+                    class="on-btn"
+                    onclick="sendCommand('waterPump', '01')"
+                  >
+                    On
+                  </button>
+                  <button
+                    class="off-btn"
+                    onclick="sendCommand('waterPump', '00')"
+                  >
+                    Off
+                  </button>
+                </div>
+                <button class="closeBtn">X</button>
+                <!-- Add your expanded card content here -->
+              </div>
             </div>
-        </aside>
-        <!-- LEFT SIDE END HERE-->
-
-        <main>
-            <header>
-                <div class="alert">
-                    <h3>Warning :</h3>
-                    <p>The temperature is low!</p>
-                    <span class="material-symbols-outlined" id="close-alert">close</span>
+          </div>
+          <!-- Curtain -->
+          <div class="card">
+            <button class="expandBtn">Curtain</button>
+            <!-- giving expandable button -->
+            <div class="overlay" id="overlay-jalousie">
+              <div class="expanded-card">
+                <h3>Curtain</h3>
+                <!-- move switch into expand area -->
+                <p class="curtain">Open the curtain</p>
+                <div class="button-group">
+                  <button class="on-btn" onclick="sendCommand('motor1', '01')">
+                    On
+                  </button>
+                  <button class="off-btn" onclick="sendCommand('motor1', '00')">
+                    Off
+                  </button>
                 </div>
-                <span class="material-symbols-outlined" id="open-alert" style="display:none;">more_horiz</span>
-            </header>
-
-            <h2>IoT-based</h2>
-            <h2>Urban Gardening</h2>
-
-            <div class="dashboard">
-                <div class="card-big">
-                    <h3>Plant General Knowledge</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. 
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                    <img src="{{ url_for('static', filename='images/microgreens.png') }}" alt="microgreens">
+                <p class="curtain">Close the curtain</p>
+                <div class="button-group">
+                  <button class="on-btn" onclick="sendCommand('motor2', '01')">
+                    On
+                  </button>
+                  <button class="off-btn" onclick="sendCommand('motor2', '00')">
+                    Off
+                  </button>
                 </div>
-                <div class="card-bigtwo">
-                    <h3>Soil Moisture</h3>
-                    <p id="soil-moisture-value">N/A</p>
-                </div>
-                <div class="card">
-                    <h3>Temperature</h3>
-                    <p id="temperature-value">N/A</p>
-                </div>
-                <div class="card">
-                    <h3>Pressure</h3>
-                    <p id="pressure-value">N/A</p>
-                </div>
-                <div class="card">
-                    <h3>Humidity</h3>
-                    <p id="humidity-value">N/A</p>
-                </div>
-                <div class="card">
-                    <h3>Visible Light</h3>
-                    <p id="visible-light-value">N/A</p>
-                 </div>   
-                <div class="card">
-                    <h3>Infrared</h3>
-                    <p id="infrared-value">N/A</p>
-                </div>
-                <div class="card">
-                    <h3>UV</h3>
-                    <p id="uv-value">N/A</p>
-                </div>
+                <button class="closeBtn">X</button>
+                <!-- Add your expanded card content here -->
+              </div>
             </div>
-        </main>
-
-        <!-- RIGHT SIDE START HERE-->
-        <aside id="sidebar-right">
-            <div class="top">
-                <div class="logo" id="toggle-btn-right">
-                    <img src="{{ url_for('static', filename='images/tunes.png') }}" alt="Logo"> 
-                    <h2>Control Board</h2>
+          </div>
+          <!-- Fan -->
+          <div class="card">
+            <button class="expandBtn">Fan</button>
+            <!-- giving expandable button -->
+            <div class="overlay" id="overlay-fan">
+              <div class="expanded-card">
+                <h3>Fan</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam.
+                </p>
+                <div class="button-group">
+                  <button class="on-btn" onclick="sendCommand('fan', '01')">
+                    On
+                  </button>
+                  <button class="off-btn" onclick="sendCommand('fan', '00')">
+                    Off
+                  </button>
                 </div>
+                <button class="closeBtn">X</button>
+                <!-- Add your expanded card content here -->
+              </div>
             </div>
-            <div class="sidebarright-content">
-                <!-- Water Pump -->
-                <div class="card">
-                    <!-- Expandable features -->
-                    <button class="expandBtn">Water Pump</button> <!-- giving expandable button -->
-                    <div class="overlay" id="overlay-water-pump">
-                        <div class="expanded-card">
-                            <h3>Water Pump</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                               Ut enim ad minim veniam.</p>
-                             <!-- move switch into expand area -->
-                             <div class="button-group">
-                                <button class="on-btn" onclick="sendCommand('waterPump', '01')">On</button>
-                                <button class="off-btn" onclick="sendCommand('waterPump', '00')">Off</button>
-                            </div>
-                            <button class="closeBtn">X</button>
-                            <!-- Add your expanded card content here -->
-                        </div>
-                    </div>
-                </div>
-                <!-- Curtain -->
-                <div class="card">
-                    <button class="expandBtn">Curtain</button> <!-- giving expandable button -->
-                    <div class="overlay" id="overlay-jalousie">
-                        <div class="expanded-card">
-                            <h3>Curtain</h3>
-                            <!-- move switch into expand area -->
-                            <p class="curtain">Open the curtain</p>
-                            <div class="button-group">
-                                <button class="on-btn" onclick="sendCommand('motor1', '01')">On</button>
-                                <button class="off-btn" onclick="sendCommand('motor1', '00')">Off</button>
-                            </div>
-                            <p class="curtain">Close the curtain</p>
-                            <div class="button-group">
-                                <button class="on-btn" onclick="sendCommand('motor2', '01')">On</button>
-                                <button class="off-btn" onclick="sendCommand('motor2', '00')">Off</button>
-                            </div>
-                            <button class="closeBtn">X</button>
-                            <!-- Add your expanded card content here -->
-                        </div>
-                    </div>
-                </div>
-                 <!-- Fan -->
-                <div class="card">
-                    <button class="expandBtn">Fan</button> <!-- giving expandable button -->
-                    <div class="overlay" id="overlay-fan">
-                        <div class="expanded-card">
-                            <h3>Fan</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Ut enim ad minim veniam.</p>
-                            <div class="button-group">
-                                <button class="on-btn" onclick="sendCommand('fan', '01')">On</button>
-                                <button class="off-btn" onclick="sendCommand('fan', '00')">Off</button>
-                            </div>
-                            <button class="closeBtn">X</button>
-                            <!-- Add your expanded card content here -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </aside>
-        <!-- RIGHT SIDE END HERE-->
+          </div>
+        </div>
+      </aside>
+      <!-- RIGHT SIDE END HERE-->
     </div>
     <!-- JAVASCRIPT -->
     <script src="{{ url_for('send_js', path='script.js') }}"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  </body>
 </html>
